--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build:dev": "webpack --config webpack.config.ts --env mode=development",
     "build:prod": "webpack --config webpack.config.ts --env mode=production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --env port=3000"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -29,17 +29,20 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@types/webpack": "5.28.2",
+    "@types/webpack-bundle-analyzer": "^4.6.0",
+    "@types/webpack-dev-server": "^4.7.2",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
-    "sass-loader": "13.3.2",
-    "ts-loader": "9.4.4",
-    "css-loader": "^6.8.1",
-    "style-loader": "^3.3.3",
     "sass": "1.66.1",
-    "typescript": "5.2.2",
+    "sass-loader": "13.3.2",
+    "style-loader": "^3.3.3",
+    "ts-loader": "9.4.4",
     "ts-node": "10.9.1",
+    "typescript": "5.2.2",
     "webpack": "5.88.2",
-    "webpack-cli": "5.1.4"
+    "webpack-bundle-analyzer": "^4.9.1",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
-
