--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,11 @@
     "target": "ES6",
     "module": "ESNext",
     "moduleResolution": "Node",
-    // "outDir": "./build/",
+    "outDir": "./build",
     "noImplicitAny": true,
     "jsx": "react-jsx",
     "allowJs": true,
+    "inlineSourceMap": true,
 
     // "rootDir": "./",
     // "baseUrl": "./",
@@ -18,7 +19,7 @@
     // "resolvePackageJsonExports": true,                /* Use the package.json 'exports' field when resolving package imports. */
     // "resolvePackageJsonImports": true,                /* Use the package.json 'imports' field when resolving imports. */
     // "customConditions": [],                           /* Conditions to set in addition to the resolver-specific defaults when resolving imports. */
-    // "resolveJsonModule": true,                        /* Enable importing .json files. */
+    "resolveJsonModule": true /* Enable importing .json files. */,
     // "allowArbitraryExtensions": true,                 /* Enable importing files with any extension, provided a declaration file is present. */
     // "noResolve": true,                                /* Disallow 'import's, 'require's or '<reference>'s from expanding the number of files TypeScript should add to a project. */
 
@@ -31,7 +32,6 @@
     // "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
     // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
     // "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
-    // "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
 
     // "removeComments": true,                           /* Disable emitting comments. */
