--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "bugs": "https://github.com/Nerdych/My-game/issues",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "test:unit": "jest --config ./config/jest/jest.config.ts",
     "build:dev": "webpack --config webpack.config.ts --env mode=development",
     "build:prod": "webpack --config webpack.config.ts --env mode=production",
     "lint:ts": "eslint src/**/*.{js,jsx,ts,tsx}",
@@ -35,7 +36,13 @@
     "react-i18next": "13.3.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.23.2",
+    "@babel/preset-react": "7.22.15",
+    "@babel/preset-typescript": "^7.23.2",
     "@svgr/webpack": "8.1.0",
+    "@testing-library/jest-dom": "6.1.4",
+    "@testing-library/react": "14.0.0",
+    "@types/jest": "29.5.7",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -48,8 +55,12 @@
     "eslint": "8.49.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-import": "2.29.0",
     "eslint-plugin-react": "7.33.2",
     "html-webpack-plugin": "5.5.3",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "2.7.6",
     "sass": "1.66.1",
     "sass-loader": "13.3.2",
