--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
   "homepage": "https://github.com/Nerdych/My-game#readme",
   "bugs": "https://github.com/Nerdych/My-game/issues",
   "scripts": {
-    "start": "webpack serve --env port=3000",
-    "test:unit": "jest --config ./config/jest/jest.config.ts",
+    "start": "webpack serve --env port=3000 bundleAnalyzerPort=4000",
     "build:dev": "webpack --config webpack.config.ts --env mode=development",
     "build:prod": "webpack --config webpack.config.ts --env mode=production",
     "lint:ts": "eslint src/**/*.{js,jsx,ts,tsx}",
     "lint:ts:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
-    "lint:scss": "npx stylelint src/**/*.scss",
-    "lint:scss:fix": "npx stylelint --fix src/**/*.scss",
+    "lint:scss": "stylelint src/**/*.{scss,css}",
+    "lint:scss:fix": "stylelint --fix src/**/*.{scss,css}",
     "prettier": "prettier --check src/**/*",
-    "prettier:fix": "prettier --write src/**/*"
+    "prettier:fix": "prettier --write src/**/*",
+    "test:unit": "jest --config config/jest/jest.config.ts",
+    "cypress:open": "cypress open --config-file config/cypress/cypress.config.ts",
+    "autotest:open": "concurrently \"npm run start\" \"npm run cypress:open\"",
+    "autotest:run": "cypress run --config-file config/cypress/cypress.config.ts"
   },
   "dependencies": {
     "i18next": "23.6.0",
@@ -36,9 +39,10 @@
     "react-i18next": "13.3.1"
   },
   "devDependencies": {
+    "@babel/core": "7.23.3",
     "@babel/preset-env": "7.23.2",
     "@babel/preset-react": "7.22.15",
-    "@babel/preset-typescript": "^7.23.2",
+    "@babel/preset-typescript": "7.23.2",
     "@svgr/webpack": "8.1.0",
     "@testing-library/jest-dom": "6.1.4",
     "@testing-library/react": "14.0.0",
@@ -51,16 +55,20 @@
     "@types/webpack-dev-server": "4.7.2",
     "@typescript-eslint/eslint-plugin": "6.7.2",
     "@typescript-eslint/parser": "6.7.2",
+    "babel-loader": "9.1.3",
+    "concurrently": "8.2.2",
     "css-loader": "6.8.1",
+    "cypress": "13.5.0",
     "eslint": "8.49.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-import": "2.29.0",
     "eslint-plugin-react": "7.33.2",
     "html-webpack-plugin": "5.5.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "mini-css-extract-plugin": "2.7.6",
     "sass": "1.66.1",
     "sass-loader": "13.3.2",
