--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
     "start": "webpack serve --env port=3000 bundleAnalyzerPort=4000",
     "build:dev": "webpack --config webpack.config.ts --env mode=development",
     "build:prod": "webpack --config webpack.config.ts --env mode=production",
+    "test:unit": "jest --config config/jest/jest.config.ts",
+    "cypress:open": "cypress open --config-file config/cypress/cypress.config.ts",
+    "test:e2e:open": "concurrently \"npm run start\" \"npm run cypress:open\"",
+    "test:e2e:run": "cypress run --config-file config/cypress/cypress.config.ts",
+    "storybook": "storybook dev -p 6006 -c config/storybook",
+    "storybook:build": "storybook build -c config/storybook",
     "lint:ts": "eslint src/**/*.{js,jsx,ts,tsx}",
     "lint:ts:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
     "lint:scss": "stylelint src/**/*.{scss,css}",
     "lint:scss:fix": "stylelint --fix src/**/*.{scss,css}",
     "prettier": "prettier --check src/**/*",
-    "prettier:fix": "prettier --write src/**/*",
-    "test:unit": "jest --config config/jest/jest.config.ts",
-    "cypress:open": "cypress open --config-file config/cypress/cypress.config.ts",
-    "autotest:open": "concurrently \"npm run start\" \"npm run cypress:open\"",
-    "autotest:run": "cypress run --config-file config/cypress/cypress.config.ts"
+    "prettier:fix": "prettier --write src/**/*"
   },
   "dependencies": {
     "i18next": "23.6.0",
@@ -43,6 +45,15 @@
     "@babel/preset-env": "7.23.2",
     "@babel/preset-react": "7.22.15",
     "@babel/preset-typescript": "7.23.2",
+    "@storybook/addon-essentials": "7.5.3",
+    "@storybook/addon-interactions": "7.5.3",
+    "@storybook/addon-links": "7.5.3",
+    "@storybook/addon-onboarding": "1.0.8",
+    "@storybook/blocks": "7.5.3",
+    "@storybook/builder-webpack5": "7.5.3",
+    "@storybook/react": "7.5.3",
+    "@storybook/react-webpack5": "7.5.3",
+    "@storybook/testing-library": "0.2.2",
     "@svgr/webpack": "8.1.0",
     "@testing-library/jest-dom": "6.1.4",
     "@testing-library/react": "14.0.0",
@@ -53,6 +64,7 @@
     "@types/webpack": "5.28.2",
     "@types/webpack-bundle-analyzer": "4.6.0",
     "@types/webpack-dev-server": "4.7.2",
+    "@types/webpack-merge": "5.0.0",
     "@typescript-eslint/eslint-plugin": "6.7.2",
     "@typescript-eslint/parser": "6.7.2",
     "babel-loader": "9.1.3",
@@ -65,6 +77,7 @@
     "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-import": "2.29.0",
     "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-storybook": "0.6.15",
     "html-webpack-plugin": "5.5.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.7.0",
@@ -72,15 +85,17 @@
     "mini-css-extract-plugin": "2.7.6",
     "sass": "1.66.1",
     "sass-loader": "13.3.2",
+    "storybook": "7.5.3",
     "style-loader": "3.3.3",
     "stylelint": "15.11.0",
     "stylelint-config-standard-scss": "11.0.0",
-    "ts-loader": "9.4.4",
     "ts-node": "10.9.1",
     "typescript": "5.2.2",
     "webpack": "5.88.2",
     "webpack-bundle-analyzer": "4.9.1",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "webpack-merge": "5.10.0"
   }
 }
+
