--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "build:dev": "webpack --config webpack.config.ts --env mode=development",
     "build:prod": "webpack --config webpack.config.ts --env mode=production",
     "test:unit": "jest --config config/jest/jest.config.ts",
-    "cypress:open": "cypress open --config-file config/cypress/cypress.config.ts",
-    "test:e2e:open": "concurrently \"npm run start\" \"npm run cypress:open\"",
-    "test:e2e:run": "cypress run --config-file config/cypress/cypress.config.ts",
+    "test:e2e": "npx playwright test --config config/playwright/playwright.config.ts",
     "storybook": "storybook dev -p 6006 -c config/storybook",
     "storybook:build": "storybook build -c config/storybook",
     "lint:ts": "eslint src/**/*.{js,jsx,ts,tsx}",
@@ -45,6 +43,7 @@
     "@babel/preset-env": "7.23.2",
     "@babel/preset-react": "7.22.15",
     "@babel/preset-typescript": "7.23.2",
+    "@playwright/test": "^1.43.1",
     "@storybook/addon-essentials": "7.5.3",
     "@storybook/addon-interactions": "7.5.3",
     "@storybook/addon-links": "7.5.3",
@@ -70,11 +69,9 @@
     "babel-loader": "9.1.3",
     "concurrently": "8.2.2",
     "css-loader": "6.8.1",
-    "cypress": "13.5.0",
     "eslint": "8.49.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-import": "2.29.0",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-storybook": "0.6.15",
