--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@typescript-eslint/parser": "6.7.2",
     "babel-loader": "9.1.3",
     "concurrently": "8.2.2",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "6.8.1",
     "eslint": "8.49.0",
     "eslint-config-airbnb": "19.0.4",
@@ -95,4 +96,3 @@
     "webpack-merge": "5.10.0"
   }
 }
-
