--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
     "i18next-http-backend": "2.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "13.3.1"
+    "react-i18next": "13.3.1",
+    "react-router-dom": "6.23.0"
   },
   "devDependencies": {
     "@babel/core": "7.23.3",
     "@babel/preset-env": "7.23.2",
     "@babel/preset-react": "7.22.15",
     "@babel/preset-typescript": "7.23.2",
-    "@playwright/test": "^1.43.1",
+    "@playwright/test": "1.43.1",
     "@storybook/addon-essentials": "7.5.3",
     "@storybook/addon-interactions": "7.5.3",
     "@storybook/addon-links": "7.5.3",
@@ -68,12 +69,11 @@
     "@typescript-eslint/parser": "6.7.2",
     "babel-loader": "9.1.3",
     "concurrently": "8.2.2",
-    "copy-webpack-plugin": "^12.0.2",
+    "copy-webpack-plugin": "12.0.2",
     "css-loader": "6.8.1",
     "eslint": "8.49.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-import": "2.29.0",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-storybook": "0.6.15",
     "html-webpack-plugin": "5.5.3",
