--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
     "build:prod": "webpack --config webpack.config.ts --env mode=production",
     "test:unit": "jest --config config/jest/jest.config.ts",
     "test:e2e": "npx playwright test --config config/playwright/playwright.config.ts",
-    "storybook": "storybook dev -p 6006 -c config/storybook",
+    "storybook": "storybook dev -p 6000 -c config/storybook",
     "storybook:build": "storybook build -c config/storybook",
     "lint:ts": "eslint src/**/*.{js,jsx,ts,tsx}",
     "lint:ts:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
     "lint:scss": "stylelint src/**/*.{scss,css}",
     "lint:scss:fix": "stylelint --fix src/**/*.{scss,css}",
     "prettier": "prettier --check src/**/*",
-    "prettier:fix": "prettier --write src/**/*"
+    "prettier:fix": "prettier --write src/**/*",
+    "test:screenshot": "loki init --config config/storybook",
+    "screenshot:update": "loki update --config config/storybook"
   },
   "dependencies": {
     "classnames": "2.5.1",
@@ -38,7 +40,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "13.3.1",
-    "react-router-dom": "6.23.0"
+    "react-router-dom": "6.23.0",
+    "storybook": "^7.5.3"
   },
   "devDependencies": {
     "@babel/core": "7.23.3",
@@ -50,6 +53,7 @@
     "@storybook/addon-interactions": "7.5.3",
     "@storybook/addon-links": "7.5.3",
     "@storybook/addon-onboarding": "1.0.8",
+    "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/blocks": "7.5.3",
     "@storybook/builder-webpack5": "7.5.3",
     "@storybook/react": "7.5.3",
@@ -69,22 +73,21 @@
     "@typescript-eslint/eslint-plugin": "6.7.2",
     "@typescript-eslint/parser": "6.7.2",
     "babel-loader": "9.1.3",
-    "concurrently": "8.2.2",
     "copy-webpack-plugin": "12.0.2",
     "css-loader": "6.8.1",
     "eslint": "8.49.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-storybook": "0.6.15",
+    "eslint-plugin-storybook": "0.8.0",
     "html-webpack-plugin": "5.5.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "loki": "0.35.0",
     "mini-css-extract-plugin": "2.7.6",
     "sass": "1.66.1",
     "sass-loader": "13.3.2",
-    "storybook": "7.5.3",
     "style-loader": "3.3.3",
     "stylelint": "15.11.0",
     "stylelint-config-standard-scss": "11.0.0",
@@ -96,5 +99,20 @@
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1",
     "webpack-merge": "5.10.0"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.docker",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.docker",
+        "preset": "iPhone 7"
+      }
+    }
   }
 }
