--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "lint:scss": "stylelint src/**/*.{scss,css}",
     "lint:scss:fix": "stylelint --fix src/**/*.{scss,css}",
     "prettier": "prettier --check src/**/*",
-    "prettier:fix": "prettier --write src/**/*",
-    "test:screenshot": "loki init --config config/storybook",
-    "screenshot:update": "loki update --config config/storybook"
+    "prettier:fix": "prettier --write src/**/*"
   },
   "dependencies": {
     "classnames": "2.5.1",
@@ -52,7 +50,7 @@
     "@storybook/addon-interactions": "7.5.3",
     "@storybook/addon-links": "7.5.3",
     "@storybook/addon-onboarding": "1.0.8",
-    "@storybook/addon-styling-webpack": "^1.0.0",
+    "@storybook/addon-styling-webpack": "1.0.0",
     "@storybook/blocks": "7.5.3",
     "@storybook/builder-webpack5": "7.5.3",
     "@storybook/react": "7.5.3",
@@ -77,22 +75,21 @@
     "eslint": "8.49.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-i18next": "^6.0.3",
+    "eslint-plugin-i18next": "6.0.3",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-storybook": "0.8.0",
     "html-webpack-plugin": "5.5.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "loki": "0.35.0",
     "mini-css-extract-plugin": "2.7.6",
     "sass": "1.66.1",
     "sass-loader": "13.3.2",
     "storybook": "7.5.3",
     "style-loader": "3.3.3",
-    "stylelint": "15.11.0",
-    "stylelint-config-standard-scss": "11.0.0",
+    "stylelint": "16.5.0",
     "stylelint-order": "6.0.4",
+    "stylelint-scss": "6.3.0",
     "ts-node": "10.9.1",
     "typescript": "5.2.2",
     "webpack": "5.88.2",
@@ -100,16 +97,5 @@
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1",
     "webpack-merge": "5.10.0"
-  },
-  "loki": {
-    "configurations": {
-      "chrome.laptop": {
-        "target": "chrome.docker",
-        "width": 1366,
-        "height": 768,
-        "deviceScaleFactor": 1,
-        "mobile": false
-      }
-    }
   }
 }
