--- a/package.json
+++ b/package.json
@@ -74,9 +74,12 @@
     "css-loader": "6.8.1",
     "eslint": "8.49.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "9.0.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-i18next": "6.0.3",
+    "eslint-plugin-jsx-a11y": "6.9.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-storybook": "0.8.0",
     "html-webpack-plugin": "5.5.3",
     "identity-obj-proxy": "3.0.0",
