--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier:fix": "prettier --write src/**/*"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "classnames": "2.5.1",
     "i18next": "23.6.0",
     "i18next-browser-languagedetector": "7.1.0",
@@ -38,6 +39,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "13.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "6.23.0"
   },
   "devDependencies": {
@@ -61,7 +63,7 @@
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.7",
     "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "18.2.7",
     "@types/webpack": "5.28.2",
     "@types/webpack-bundle-analyzer": "4.6.0",
@@ -72,6 +74,7 @@
     "babel-loader": "9.1.3",
     "copy-webpack-plugin": "12.0.2",
     "css-loader": "6.8.1",
+    "dotenv": "^16.4.5",
     "eslint": "8.49.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "9.0.0",
