--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "i18next": "23.6.0",
     "i18next-browser-languagedetector": "7.1.0",
     "i18next-http-backend": "2.2.2",
+    "mobx": "^6.13.5",
+    "mobx-react": "^9.1.1",
+    "npm": "^10.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "13.3.1",
